# flask-monolith-template

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  build.sh  config.py  pyproject.toml
app/: app.py  extensions.py  main.py  models.py  scripts.py
app/blueprints/: __init__.py
